--- a/SkedPortal/Web.config
+++ b/SkedPortal/Web.config
@@ -21,8 +21,14 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <authentication mode="Forms">
-      <forms loginUrl="Employees/Login"></forms>
+      <forms loginUrl="Account/Login"></forms>
     </authentication>
+    <roleManager enabled="true" defaultProvider="MyRoleProvider">
+      <providers>
+        <clear />
+        <add name="MyRoleProvider" type="SkedPortal.Roles" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
