--- a/SkedPortal/SkedPortal.csproj
+++ b/SkedPortal/SkedPortal.csproj
@@ -284,6 +284,7 @@
     <Content Include="Views\AssignedFlights\Details.cshtml" />
     <Content Include="Views\AssignedFlights\Edit.cshtml" />
     <Content Include="Views\AssignedFlights\Index.cshtml" />
+    <Content Include="Views\Flights\Current_Flights.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
