--- a/SkedPortal/SkedPortal.csproj
+++ b/SkedPortal/SkedPortal.csproj
@@ -235,6 +235,7 @@
     <Content Include="Models\SkedPortalModel.edmx.diagram">
       <DependentUpon>SkedPortalModel.edmx</DependentUpon>
     </Content>
+    <None Include="Properties\PublishProfiles\skedportal.pubxml" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -252,7 +253,9 @@
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
